--- a/2_model.html
+++ b/2_model.html
@@ -3373,7 +3373,11 @@ mod3 &lt;- glmer(STATUS~(1|COURSE) + (1|HOM_GEO_PRV_DN) + MEDIA_PESATA + CFU_PAS
 ##       Balanced Accuracy : 0.8790          
 ##                                           
 ##        &#39;Positive&#39; Class : 1               
-## </pre></article></slide>
+## </pre>
+
+</article></slide><slide class=""><hgroup><h2>Thank you for the attention</h2></hgroup><article  id="thank-you-for-the-attention">
+
+<p>Questions? </p></article></slide>
 
 
   <slide class="backdrop"></slide>
